--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
