--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     }
   ],
   "compilerOptions": {
-    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "types": ["node", "jest"],
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
